updated the left column to not align items center.  This fixed the spacing for individual meme and users/:id

--- a/public/stylesheets/user-page.css
+++ b/public/stylesheets/user-page.css
@@ -96,7 +96,6 @@ div.profile-name-bar {
 .fixed-position {
   display: flex;
   flex-direction: column;
-  align-items: center;
   position: sticky;
   top: 33vh;
   z-index: 1;
